2012-04-20  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* avrdude.conf.in (ATxmega16D4, ATxmega32D4, ATxmega64D4,
	ATxmega128D4): New devices.  As Xmega D doesn't feature a fuse0
	memory cell, move that one out from the generic .xmega part into
	the individual Xmega A parts.

2012-04-19  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #29019: pagel/bs2 warning when uploading using stk500 to xmega
	* stk500.c (stk500_initialize): Insert dummy values for PAGEL and
	BS2 if they are not present in the config file, in order to be able
	to proceed with the stk500_set_extended_parms() anyway.

2012-04-19  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* stk500v2_private.h (struct pdata): add boot_start
	* stk500v2.c: For the "flash" pseudo-memory of Xmega devices,
	distinguish addresses between "application" and "boot" area.

2012-04-18  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* fileio.c (elf2b): When checking the bounds of the current
	program header segment, subtract `low' from ph[n].p_paddr in order
	to correct the magic section offsets for the AVR's non-flash
	memory regions.

2012-04-18  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* fileio.c (elf_get_scn): Rather than trying to just match whether
	any given section maps straight to a program header segment, use a
	more sophisticated decision that matches any section as long as it
	fits into the segment.  This is needed for situations where the
	program header segment spans a larger area than the section data
	provided.  (This can e.g. happen in an ELF file that contains no
	data at address 0, like a bootloader only.)

2012-04-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #28744: Can't load bootloader to xmega128a1 (part 2, fix for
	firmware >= V7.x)
	* jtagmkII.c: Add firmware-version dependent handling of Xmega parameters.
	V7.x firmware expects the NVM offsets being specified through the Xmega
	parameters command, but left out as part of the memory address itself.